--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,8 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
         <title>INDEX</title>
+        <link href="https://fonts.googleapis.com/css?family=Mina:400,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
     <body>
         {% block content %}
