--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -7,3 +7,46 @@
     box-sizing: border-box;
     font-family: 'Mina';
 }
+
+body {
+    background-color: #f7f7f7;
+}
+
+.login_container {
+    width: 25%;
+    margin: 100px auto;
+    background-color: white;
+    text-align: center;
+    padding: 50px;
+    border-radius: 2px;
+    box-shadow: 0 0 5px #e6e6e6;
+}
+
+.login_container form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.login_container form input {
+    width: 100%;
+    margin: 10px;
+    padding: 5px;
+    background-color: white;
+    border: none;
+    border-bottom: 1px solid #e6e6e6;
+    outline: none;
+}
+
+.login_container form button {
+    width: 100%;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: bold;
+    margin-top: 20px;
+    border: 2px solid #328538;
+    background-color: #328538;
+    padding: 5px;
+    color: white;
+    cursor: pointer;
+}
