--- a/src/templates/login/login.html
+++ b/src/templates/login/login.html
@@ -6,9 +6,9 @@
         <h3>WELCOM</h3>
         <img src="{% static 'assets/login.png' %}" alt="">
 
-        <form class="">
-            <input type="email" name="" placeholder="Email ..." value="">
-            <input type="password" placeholder="Password ..." name="" value="">
+        <form method="POST">{% csrf_token %}
+            <input type="email" name="email" placeholder="Email ..." value="">
+            <input type="password" placeholder="Password ..." name="password" value="">
             <button type="submit" name="button">Login</button>
         </form>
 
