--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -52,3 +52,62 @@ body {
     cursor: pointer;
     outline: none;
 }
+
+.header_container {
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    display: flex;
+}
+
+.header_container .header_menu {
+    width: 50%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.header_menu a {
+    text-decoration: none;
+    color: grey;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.header_container .header_user_info {
+    width: 50%;
+    height: 50px;
+}
+
+.header_user_info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.header_user_info p {
+    font-size: 10px;
+    color: grey;
+    font-weight: bold;
+    margin: 10px;
+    display: flex;
+}
+
+.header_user_info p a {
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: bold;
+    color: #328538;
+    margin: 0 5px;
+}
+
+.header_user_info a {
+    display: flex;
+    align-items: center;
+}
+
+.header_user_info a img {
+    border-radius: 50%;
+}
