--- a/src/templates/home/index.html
+++ b/src/templates/home/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
+    {% include 'header.html' %}
     <div class="">
         <h3>Home</h3>
     </div>
