--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -6,6 +6,7 @@
     </div>
     <div class="header_user_info">
         <p>posts <a href="">123</a></p>
+        <p>subscriptions <a href="">2</a></p>
         <p>followers <a href="">12</a></p>
         <a href="">
             <img src="https://pp.userapi.com/c845521/v845521265/1958c1/Pwk8qgTbAog.jpg" width="30" height="30" />
