--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -13,6 +13,9 @@ body {
 }
 
 .login_container {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 20%;
     margin: 100px auto;
     background-color: white;
@@ -46,12 +49,20 @@ body {
     font-weight: bold;
     margin-top: 20px;
     border: 2px solid #328538;
-    background-color: #328538;
-    padding: 5px;
-    color: white;
+    background-color: white;
+    padding: 3px;
+    color: #328538;
     cursor: pointer;
     outline: none;
+    transition-property: background-color, color;
+    transition-duration: 0.3s;
 }
+
+.login_container form button:hover {
+    background-color: #328538;
+    color: white;
+}
+
 
 .header_container {
     width: 100%;
@@ -113,4 +124,44 @@ body {
 
 .header_user_info a img {
     border-radius: 50%;
+}
+
+.container_posts {
+    position: fixed;
+    top: 60px;
+    left: 50px;
+    width: 40%;
+    height: 500px;
+    /* background-color: white; */
+}
+
+.container_posts .container_wrapper {
+    padding: 10px;
+    width: 100%;
+    height: 500px;
+    /* background-color: #e6e6e6; */
+    overflow-x: hidden;
+    overflow-y: scroll;
+    /* background-color: white; */
+    border-radius: 3px;
+}
+
+
+.container_wrapper::-webkit-scrollbar {
+    width: 5px;
+}
+
+.container_wrapper::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #e6e6e6;
+}
+
+.container_wrapper .item {
+    font-size: 14px;
+    color: grey;
+    font-weight: bold;
+    border-radius: 3px;
+    padding: 10px;
+    background-color: white;
+    border-bottom: 1px solid #e6e6e6;
 }
