add logout function

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -11,5 +11,6 @@
         <a href="">
             <img src="https://pp.userapi.com/c845521/v845521265/1958c1/Pwk8qgTbAog.jpg" width="30" height="30" />
         </a>
+        <a class='btn_exit' href="{% url 'exit:exit_page' %}">logout</a>
     </div>
 </div>
