--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -13,9 +13,6 @@ body {
 }
 
 .login_container {
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 20%;
     margin: 100px auto;
     background-color: white;
@@ -164,4 +161,12 @@ body {
     padding: 10px;
     background-color: white;
     border-bottom: 1px solid #e6e6e6;
+}
+
+.btn_exit {
+    margin-left: 10px;
+    font-size: 10px;
+    color: #e6e6e6;
+    text-decoration: none;
+    text-transform: uppercase;
 }
