--- a/src/templates/register/index.html
+++ b/src/templates/register/index.html
@@ -5,10 +5,10 @@
     <div class="register_container">
         <h3>REGISTER</h3>
         <img src="{% static 'assets/add-user.png' %}" alt="">
-        <form class="">
-            <input type="text" placeholder="Username ..." name="" value="">
-            <input type="email" placeholder="Email ..." name="" value="">
-            <input type="password" placeholder="Password ..." name="" value="">
+        <form method="POST" class="">{% csrf_token %}
+            <input type="text" placeholder="Username ..." name="username" value="">
+            <input type="email" placeholder="Email ..." name="email" value="">
+            <input type="password" placeholder="Password ..." name="password" value="">
             <button type="submit" name="button">register</button>
         </form>
     </div>
