--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -212,3 +212,10 @@ body {
     background-color: #328538;
     color: white;
 }
+
+.btn_register {
+    text-decoration: none;
+    margin: 10px;
+    color: grey;
+    font-weight: bold;
+}
