--- a/src/templates/login/login.html
+++ b/src/templates/login/login.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% block content %}
 
+    <a class='btn_register' href="{% url 'register:register_page' %}">register</a>
+
     <div class="login_container">
         <h3>WELCOM</h3>
         <img src="{% static 'assets/login.png' %}" alt="">
