--- a/src/templates/register/index.html
+++ b/src/templates/register/index.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% block content %}
 
+    <a class='btn_register' href="{% url 'login:login_page' %}">login</a>
+
     <div class="register_container">
         <h3>REGISTER</h3>
         <img src="{% static 'assets/add-user.png' %}" alt="">
