--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div class="header_container">
     <div class="header_menu">
         <a href="#">Home</a>
@@ -9,8 +10,9 @@
         <p>subscriptions <a href="">2</a></p>
         <p>followers <a href="">12</a></p>
         <a href="">
-            <img src="https://pp.userapi.com/c845521/v845521265/1958c1/Pwk8qgTbAog.jpg" width="30" height="30" />
+            <img class='avatar' src="https://pp.userapi.com/c845521/v845521265/1958c1/Pwk8qgTbAog.jpg" width="30" height="30" />
         </a>
+        <img src="{% static 'assets/plus.png' %}" alt="">
         <a class='btn_exit' href="{% url 'exit:exit_page' %}">logout</a>
     </div>
 </div>
