--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -6,7 +6,7 @@
         <a href="#">About</a>
     </div>
     <div class="header_user_info">
-        <p>posts <a href="">123</a></p>
+        <p>posts <a href="">{{user.profile.twit_set.all.count}}</a></p>
         <p>subscriptions <a href="">2</a></p>
         <p>followers <a href="">12</a></p>
         <a href="">
