--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -11,7 +11,7 @@
         <a href="">
             <img class='avatar' src="https://pp.userapi.com/c845521/v845521265/1958c1/Pwk8qgTbAog.jpg" width="30" height="30" />
         </a>
-        <img src="{% static 'assets/plus.png' %}" alt="">
+        <img class='btn_new' src="{% static 'assets/plus.png' %}" alt="">
         <a class='btn_exit' href="{% url 'exit:exit_page' %}">logout</a>
     </div>
 </div>
