--- a/src/templates/home/index.html
+++ b/src/templates/home/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    {% include 'new.html' %}
     {% include 'header.html' %}
     <div class="container_posts">
         <div class="container_wrapper">
