--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -5,10 +5,12 @@
         <meta charset="utf-8">
         <title>INDEX</title>
         <link href="https://fonts.googleapis.com/css?family=Mina:400,700&display=swap" rel="stylesheet">
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
     <body>
         {% block content %}
         {% endblock %}
     </body>
+    <script src="{% static 'js/main.js' %}"></script>
 </html>
