--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -7,7 +7,7 @@
     </div>
     <div class="header_user_info">
         <p>posts <a href="">{{user.profile.twit_set.all.count}}</a></p>
-        <p>followers <a href="">{{user.profile.followers.all.count}}</a></p>
+        <p>subscriptions <a href="">{{user.profile.followers.all.count}}</a></p>
         <a href="">
             <img class='avatar' src="https://pp.userapi.com/c845521/v845521265/1958c1/Pwk8qgTbAog.jpg" width="30" height="30" />
         </a>
