--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -281,3 +281,54 @@ body {
     background-color: #328538;
     color: white;
 }
+
+.main_container {
+    border: 1px solid red;
+}
+
+.other_container {
+    width: 40%;
+    height: 500px;
+    position: fixed;
+    top: 70px;
+    right: 50px;
+}
+
+.other_container .label {
+    text-align: center;
+    font-weight: bold;
+    color: green;
+}
+
+
+.other_container .other_wrapper {
+    padding: 10px;
+    width: 100%;
+    height: 500px;
+    /* background-color: #e6e6e6; */
+    overflow-x: hidden;
+    overflow-y: scroll;
+    /* background-color: white; */
+    border-radius: 3px;
+}
+
+
+.other_wrapper::-webkit-scrollbar {
+    width: 5px;
+}
+
+.other_wrapper::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #e6e6e6;
+}
+
+.other_wrapper .item {
+    font-size: 14px;
+    color: grey;
+    font-weight: bold;
+    border-radius: 3px;
+    padding: 10px;
+    background-color: white;
+    border-bottom: 1px solid #e6e6e6;
+
+}
