--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -218,7 +218,7 @@ body {
     text-decoration: none;
     margin: 10px;
     color: grey;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 .info_author {
