--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -8,9 +8,15 @@
     <div class="header_user_info">
         <p>posts <a href="">{{user.profile.twit_set.all.count}}</a></p>
         <p>subscriptions <a href="">{{user.profile.followers.all.count}}</a></p>
+        {% if user.profile.avatar %}
         <a href="">
-            <img class='avatar' src="https://pp.userapi.com/c845521/v845521265/1958c1/Pwk8qgTbAog.jpg" width="30" height="30" />
+            <img class='avatar' src="{{user.profile.avatar.url}}" width="30" height="30" />
         </a>
+        {% else %}
+            <a href=''>
+                <img class="avatar" src="https://fora.kz/images/no-photo.jpg" width="30" height="30" alt="">
+            </a>
+        {% endif %}
         <img class='btn_new' src="{% static 'assets/plus.png' %}" alt="">
         <a class='btn_exit' href="{% url 'exit:exit_page' %}">logout</a>
     </div>
