--- a/src/templates/profile/detail.html
+++ b/src/templates/profile/detail.html
@@ -3,6 +3,8 @@
 
 {% block content %}
 
+    {% include 'header.html' %}
+
     <div class="profile_container">
         <h3>DETAIL</h3>
     </div>
