--- a/src/templates/profile/detail.html
+++ b/src/templates/profile/detail.html
@@ -6,7 +6,9 @@
     {% include 'header.html' %}
 
     <div class="profile_container">
-        <h3>DETAIL</h3>
+        <div class="">
+            <p>{{object.login}}</p>
+        </div>
     </div>
 
 {% endblock %}
